--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -12,7 +12,8 @@ public_folder: '/static/img'
 local_backend: true
 # publish_mode: editorial_workflow
 collections:
-  - label: 'Blog'
+  - label: 'Posts'
+    label_singular: 'post'
     name: 'blog'
     folder: 'src/posts'
     create: true
