update press and bio

--- a/src/_data/press.yaml
+++ b/src/_data/press.yaml
@@ -1,5 +1,15 @@
 ---
 links:
+  - title: 'Resilient Neighborhoods: These three nonprofits are working to keep East Side Detroiters in their homes'
+    pub: 'The Arab American News'
+    url: 'https://arabamericannews.com/2022/12/10/resilient-neighborhoods-these-three-nonprofits-are-working-to-keep-east-side-detroiters-in-their-homes/'
+  - title: 'Resilient Neighborhoods: East Side Detroit groups are taking a stand against illegal dumping'
+    pub: 'modelD'
+    url: 'hhttps://www.modeldmedia.com/features/resilient-neighborhoods-east-side-detroit-illegal-dumping.aspx'
+  - title: 'Historic West Village home to be torn down for new Detroit apartment plan'
+    desc: 'It may not look like much, but a small house in West Village is big on history.'
+    pub: 'Fox 2 News'
+    url: 'https://www.fox2detroit.com/news/historic-east-village-home-to-be-torn-down-for-new-detroit-apartment-plan'
   - title: Detroit incinerator is hotspot for health problems, environmentalists claim
     url: 'https://www.theguardian.com/us-news/2016/oct/23/detroit-garbage-incinerator-pollution-health-problems-environmentalists'
     desc: The country’s biggest trash-burning facility has been issued with a notice to sue, with local residents complaining of the bad smell and pollution it produces
